# blockdb

./: .cursorrules  .gitignore  AI_DEVELOPMENT.md  CONTRIBUTING.md  Cargo.toml  DIRECTORY_STRUCTURE.md  DOCKER.md  Dockerfile  LICENSE  README.md  TEST_REPORT.md  blockdb.toml  docker-compose.cluster.yml  docker-compose.yml  simple_demo.rs
benches/: comprehensive_benchmarks.rs
docker/: blockdb.toml  entrypoint.sh  nginx.conf
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  FLUSH_DEMO.md  PERFORMANCE_TUNING.md  README.md  TROUBLESHOOTING.md
docs/development/: CLAUDE.md  COLLECTION_SYSTEM.md
docs/examples/: DEMO.md
docs/testing/: COMPREHENSIVE_TEST_GUIDE.md  MANUAL_TESTING.md  TEST_RESULTS.md
examples/demos/: collection_demo.rs  collection_flow_test.rs
examples/usage/: USAGE_EXAMPLE.rs  basic_usage.rs
k8s/: configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  rbac.yaml  service.yaml  statefulset.yaml
scripts/: docker-build.sh  docker-deploy.sh  k8s-deploy.sh  run_comprehensive_tests.sh
src/: distributed.rs  error.rs  lib.rs
src/api/: mod.rs
src/auth/: auth_manager.rs  crypto.rs  distributed_auth.rs  identity.rs  mod.rs  permissions.rs  simple_tests.rs  tests.rs
src/consensus/: log_entry.rs  mod.rs  raft.rs
src/storage/: blockchain.rs  collection.rs  compaction.rs  memtable.rs  mod.rs  sstable.rs  wal.rs
src/transaction/: mod.rs  (+2 more)
tests/: api_auth_test.rs  auth_integration_test.rs  cli_test.rs  config_and_error_test.rs  consensus_test.rs  performance_test.rs  property_based_test.rs  storage_comprehensive_test.rs
