[package]
name = "blockdb"
version = "0.1.0"
edition = "2021"
description = "High-throughput append-only database with blockchain verification"
authors = ["BlockDB Team"]
license = "MIT"
repository = "https://github.com/username/blockdb"
keywords = ["database", "blockchain", "append-only", "high-throughput"]
categories = ["database", "cryptography"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sha2 = "0.10"
base64 = "0.21"
hyper = { version = "0.14", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"
async-trait = "0.1"
rand = "0.8"
futures = "0.3"
tokio-stream = "0.1"
ed25519-dalek = "1.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[lib]
name = "blockdb"
path = "src/lib.rs"

[[bin]]
name = "blockdb-server"
path = "src/bin/server.rs"

[[bin]]
name = "blockdb-cli"
path = "src/bin/simple_cli.rs"